# Game-Of-Life

./: CMakeLists.txt  README.md  main.c  test.c
CUnitTest/: testUnit.c
game/: CMakeLists.txt  board.c  board.h  cell.c  cell.h
gui/: CMakeLists.txt  entity.c  entity.h  map.c  map.h  screen.c  screen.h  window.c
